--- a/docs/assets/style/index.scss
+++ b/docs/assets/style/index.scss
@@ -3,6 +3,11 @@
   padding: 0;
 }
 
+body {
+  background-color: #f7f8fa;
+  font-size: var(--d-font-size-sm);
+}
+
 // 文档预览样式
 .d-doc {
   &__container {
