feat(cell): 增加 disabled 属性

--- a/packages/cell/style.scss
+++ b/packages/cell/style.scss
@@ -20,6 +20,12 @@
     }
   }
 
+  &--disabled {
+    #{$parent}__title {
+      color: var(--d-disable-color);
+    }
+  }
+
   &__title {
     &--mark {
       vertical-align: middle;
