feat(cell-group): 增加单元格分组组件

--- a/packages/style/index.scss
+++ b/packages/style/index.scss
@@ -2,3 +2,4 @@
 @import './normalize';
 @import 'packages/input/style.scss';
 @import 'packages/cell/style.scss';
+@import 'packages/cell-group/style.scss';
