--- a/packages/style/var.scss
+++ b/packages/style/var.scss
@@ -13,6 +13,11 @@
   --d-border-color: #e5e5e5;
   --d-border: 1px solid var(--d-border-color);
 
+  // 圆角
+  --d-radius-xs: 2px;
+  --d-radius-md: 4px;
+  --d-radius-lg: 8px;
+
   // 文字大小
   --d-font-size-xs: 10px;
   --d-font-size-sm: 12px;
