refactor(doc): 文档样式调整

--- a/docs/assets/style/index.scss
+++ b/docs/assets/style/index.scss
@@ -5,6 +5,7 @@
 
 body {
   background-color: #f7f8fa;
+  font-family: -apple-system;
   font-size: var(--d-font-size-sm);
   color: var(--d-primary-text-color);
 }
