--- a/packages/style/mixins.scss
+++ b/packages/style/mixins.scss
@@ -39,3 +39,17 @@
     }
   }
 }
+
+@mixin text-align {
+  &--left {
+    text-align: left;
+  }
+
+  &--center {
+    text-align: center;
+  }
+
+  &--right {
+    text-align: right;
+  }
+}
