--- a/packages/style/index.scss
+++ b/packages/style/index.scss
@@ -3,3 +3,4 @@
 @import 'packages/input/style.scss';
 @import 'packages/cell/style.scss';
 @import 'packages/cell-group/style.scss';
+@import 'packages/icon/style.scss';
