docs(icon): 图标组件 props 文档更新

--- a/docs/assets/style/index.scss
+++ b/docs/assets/style/index.scss
@@ -21,7 +21,10 @@ body {
   }
 
   &__menu {
+    position: sticky;
+    top: 0;
     width: 200px;
+    height: 100%;
     margin-right: var(--d-gap-lg);
   }
 
