refactor(cell): 单元格组件增加边距

--- a/packages/cell-group/style.scss
+++ b/packages/cell-group/style.scss
@@ -11,6 +11,7 @@
 
   &__content {
     &--radius {
+      margin: 0 var(--d-gap-xs);
       overflow: hidden;
       border-radius: var(--d-radius-lg);
     }
