--- a/docs/components/preview/style.scss
+++ b/docs/components/preview/style.scss
@@ -1,35 +1,46 @@
 .d-doc-preview {
   $prefix: &;
+
   &__wrapper {
     margin-top: var(--d-gap-sm);
     border: var(--d-border);
 
-    > * {
-      padding: 0 var(--d-gap-sm);
+    .shiki {
+      margin-top: 0;
     }
 
     &--h5 {
-      position: fixed;
-      top: 50%;
-      right: 30px;
-      width: 375px;
-      height: 600px;
-      padding: 0;
-      overflow: auto;
-      transform: translateY(-50%);
+      height: 500px;
+      margin: var(--d-gap-sm) 0;
 
-      > * {
-        padding: 0;
-      }
+      #{$prefix} {
+        &__content {
+          display: flex;
+          height: 100%;
+          padding: 0;
+        }
 
-      ~ * {
-        width: calc(100% - 375px - 30px) !important;
+        &__code {
+          flex: 1;
+          display: block;
+          height: 100%;
+          margin-top: 0;
+          padding: 0;
+          border-right: var(--d-border);
+          overflow: auto;
+        }
+
+        &__runtime {
+          width: 375px;
+          height: 100%;
+          overflow: auto;
+        }
       }
     }
   }
 
   &__runtime {
-    padding-top: var(--d-gap-sm);
+    padding: var(--d-gap-sm);
   }
 
   &__toolbar {
@@ -49,8 +60,6 @@
 
   &__code {
     display: none;
-    margin-top: var(--d-gap-sm);
-    padding-bottom: var(--d-gap-sm);
 
     &--active {
       display: block;
