refactor(cell-group): 圆角命名调整

--- a/packages/cell-group/style.scss
+++ b/packages/cell-group/style.scss
@@ -10,7 +10,7 @@
   }
 
   &__content {
-    &--radius {
+    &--round {
       margin: 0 var(--d-gap-xs);
       overflow: hidden;
       border-radius: var(--d-radius-lg);
