feat(switch): 增加开关组件

--- a/packages/style/index.scss
+++ b/packages/style/index.scss
@@ -4,3 +4,4 @@
 @import 'packages/cell/style.scss';
 @import 'packages/cell-group/style.scss';
 @import 'packages/icon/style.scss';
+@import 'packages/switch/style.scss';
