--- a/packages/style/var.scss
+++ b/packages/style/var.scss
@@ -13,6 +13,8 @@
   --d-border-color: #e5e5e5;
   --d-border: 1px solid var(--d-border-color);
 
+  --d-switch-bg-color: #bcbcbc;
+
   // 圆角
   --d-radius-xs: 2px;
   --d-radius-md: 4px;
