--- a/docs/src/assets/style/index.scss
+++ b/docs/src/assets/style/index.scss
@@ -44,11 +44,28 @@ a {
     padding: var(--d-gap-md);
     font-size: var(--d-font-size-md);
     line-height: var(--d-line-height-lg);
+
+    &--mobile {
+      padding: var(--d-gap-sm);
+    }
+  }
+
+  &__demo-wrapper {
+    width: 100%;
+  }
+
+  &__demo-mobile {
+    position: sticky;
+    top: var(--d-gap-md);
+    width: 375px;
+    height: 500px;
+    margin: 40px 0 0 var(--d-gap-md);
+    border: var(--d-border);
   }
 
   &__menu {
     position: sticky;
-    top: 0;
+    top: var(--d-gap-md);
     width: 200px;
     height: 100%;
     margin-right: var(--d-gap-lg);
@@ -56,9 +73,14 @@ a {
 
   &__content {
     flex: 1;
+    display: flex;
     max-width: 1300px;
     margin: 0 auto;
     font-size: 14px;
+
+    > .markdown-body {
+      flex: 1;
+    }
 
     li {
       padding: 4px 0;
@@ -147,5 +169,6 @@ a {
   box-sizing: border-box;
   margin-top: var(--d-gap-sm);
   padding: var(--d-gap-sm);
+  border: var(--d-border);
   background: none !important;
 }
