--- a/packages/src/cell/style.scss
+++ b/packages/src/cell/style.scss
@@ -54,7 +54,8 @@
     color: var(--d-secondary-text-color);
   }
 
-  &__right-icon {
+  &__right-icon,
+  &__arrow {
     margin-left: var(--d-gap-xs);
   }
 }
