--- a/docs/src/assets/style/index.scss
+++ b/docs/src/assets/style/index.scss
@@ -3,6 +3,17 @@
   padding: 0;
 }
 
+html.mobile {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
+  body,
+  #app {
+    height: 100%;
+  }
+}
+
 body {
   background-color: #f7f8fa;
   font-family: -apple-system;
@@ -46,12 +57,9 @@ a {
     line-height: var(--d-line-height-lg);
 
     &--mobile {
-      padding: var(--d-gap-sm);
+      height: 100%;
+      padding: 0;
     }
-  }
-
-  &__demo-wrapper {
-    width: 100%;
   }
 
   &__demo-mobile {
