fix: 组件样式优化

--- a/packages/src/cell/style.scss
+++ b/packages/src/cell/style.scss
@@ -5,7 +5,7 @@
   $parent: &;
   display: flex;
   align-items: center;
-  padding: var(--d-gap-xs) var(--d-gap-sm);
+  padding: var(--d-horizontal-gap) var(--d-gap-sm);
   background-color: var(--d-white-color);
   font-size: var(--d-font-size-md);
   line-height: var(--d-line-height-md);
