--- a/packages/src/switch/style.scss
+++ b/packages/src/switch/style.scss
@@ -6,6 +6,7 @@
   border: 0;
   border-radius: 4px;
   background-color: var(--d-switch-bg-color);
+  vertical-align: middle;
   transition: background-color 0.3s;
   cursor: pointer;
 
