--- a/packages/src/style/mixins.scss
+++ b/packages/src/style/mixins.scss
@@ -69,3 +69,8 @@
     -webkit-line-clamp: $number;
   }
 }
+
+%safe-area-inset-bottom {
+  padding-bottom: constant(safe-area-inset-bottom);
+  padding-bottom: env(safe-area-inset-bottom);
+}
