refactor(DemoBlock): demo 样式调整

--- a/docs/src/components/demo-block/style.scss
+++ b/docs/src/components/demo-block/style.scss
@@ -1,3 +1,8 @@
 .d-demo-block {
   margin-bottom: var(--d-gap-sm);
+
+  &__title {
+    margin-bottom: var(--d-gap-xs);
+    color: var(--d-secondary-text-color);
+  }
 }
