--- a/packages/src/button/style.scss
+++ b/packages/src/button/style.scss
@@ -5,6 +5,7 @@
   display: inline-block;
   box-sizing: border-box;
   border: var(--d-border);
+  cursor: pointer;
 
   &--block {
     display: block;
