feat(Upload): 增加文件上传组件

--- a/packages/src/style/var.scss
+++ b/packages/src/style/var.scss
@@ -9,6 +9,15 @@
 
   --d-white-color: #fff;
 
+  --d-gray-1: #f7f8fa;
+  --d-gray-2: #f2f3f5;
+  --d-gray-3: #ebedf0;
+  --d-gray-4: #dcdee0;
+  --d-gray-5: #c8c9cc;
+  --d-gray-6: #969799;
+  --d-gray-7: #646566;
+  --d-gray-8: #323233;
+
   // 边框颜色
   --d-border-color: #e5e5e5;
   --d-border: 1px solid var(--d-border-color);
