refactor(Picker): 选择器组件增加内部受控逻辑

--- a/packages/src/style/var.scss
+++ b/packages/src/style/var.scss
@@ -49,6 +49,7 @@
   --d-primary-text-color: #{rgba(black, 0.85)};
   --d-secondary-text-color: #{rgba(black, 0.45)};
   --d-disable-color: #{rgba(black, 0.25)};
+  --d-placeholder-color: #{rgba(black, 0.25)};
 
   // 间距
   --d-gap-xxs: 4px;
