refactor(Picker): 选择器组件增加内部受控逻辑

--- a/packages/src/cell/style.scss
+++ b/packages/src/cell/style.scss
@@ -30,7 +30,9 @@
 
   &__title {
     @include text-align;
+    align-self: flex-start;
     margin-right: var(--d-gap-xs);
+    word-break: break-word;
 
     &--mark {
       vertical-align: middle;
