--- a/packages/src/picker/style.scss
+++ b/packages/src/picker/style.scss
@@ -2,6 +2,16 @@
 @import '../style/mixins';
 
 .#{$prefix}-picker {
+  &__trigger {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+
+    &--empty:not(.#{$prefix}-icon) {
+      @include placeholder;
+    }
+  }
+
   &__header {
     display: flex;
     justify-content: space-between;
