--- a/packages/src/picker/style.scss
+++ b/packages/src/picker/style.scss
@@ -7,6 +7,10 @@
     width: 100%;
     height: 100%;
 
+    .#{$prefix}-icon {
+      float: right;
+    }
+
     &--empty:not(.#{$prefix}-icon) {
       @include placeholder;
     }
