--- a/packages/src/style/index.scss
+++ b/packages/src/style/index.scss
@@ -13,6 +13,7 @@
 @import '../rate/style';
 @import '../radio/style';
 @import '../radio-group/style';
+@import '../checkbox/style';
 @import '../checkbox-group/style';
 @import '../space/style';
 @import '../image/style';
