refactor: 统一组件 disabled、readonly 参数及样式

--- a/packages/src/cell/style.scss
+++ b/packages/src/cell/style.scss
@@ -23,8 +23,11 @@
   }
 
   &--disabled {
-    #{$parent}__title {
-      color: var(--d-disable-color);
+    #{$parent} {
+      &__title,
+      &__content {
+        color: var(--d-disable-color);
+      }
     }
   }
 
