feat(Form): 表单组件支持分组模式

--- a/packages/src/input/style.scss
+++ b/packages/src/input/style.scss
@@ -11,7 +11,8 @@
     background: none;
   }
 
-  &--disabled {
+  &--disabled,
+  &--readonly {
     color: var(--d-disable-color);
 
     &::placeholder {
