--- a/packages/src/picker/style.scss
+++ b/packages/src/picker/style.scss
@@ -3,13 +3,15 @@
 
 .#{$prefix}-picker {
   &__trigger {
-    display: inline-block;
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     height: 100%;
     @include disabled;
 
     .#{$prefix}-icon {
-      float: right;
+      margin-left: var(--d-gap-xxs);
     }
 
     &--empty:not(.#{$prefix}-icon) {
