--- a/docs/src/assets/style/index.scss
+++ b/docs/src/assets/style/index.scss
@@ -65,7 +65,7 @@ blockquote {
   position: relative;
   box-sizing: border-box;
   margin-top: var(--d-gap-sm);
-  padding: var(--d-gap-sm);
+  padding: var(--d-gap-xs) var(--d-gap-xs) var(--d-gap-xs) var(--d-gap-sm);
   border-radius: 5px;
   background: #f2f4f5 !important;
   overflow: hidden;
