docs: 补充常见问题说明，增加 commit 规范说明

--- a/docs/src/assets/style/index.scss
+++ b/docs/src/assets/style/index.scss
@@ -197,6 +197,11 @@ blockquote {
       font-size: 24px;
     }
 
+    img {
+      margin-top: var(--d-gap-sm);
+      vertical-align: top;
+    }
+
     table {
       width: 100%;
       border: var(--d-border);
