refactor: 图标默认大小调整

--- a/packages/src/icon/style.scss
+++ b/packages/src/icon/style.scss
@@ -15,22 +15,22 @@
 
   &--small {
     > svg {
-      width: 1em;
-      height: 1em;
+      width: 16px;
+      height: 16px;
     }
   }
 
   &--medium {
     > svg {
-      width: 1.5em;
-      height: 1.5em;
+      width: 20px;
+      height: 20px;
     }
   }
 
   &--large {
     > svg {
-      width: 2em;
-      height: 2em;
+      width: 24px;
+      height: 24px;
     }
   }
 
