fix(Picker): 修复选择器组件，内容超出未显示省略号问题

--- a/packages/src/picker/style.scss
+++ b/packages/src/picker/style.scss
@@ -41,11 +41,10 @@
   }
 
   &-item {
-    display: flex;
-    justify-content: center;
     padding: 10px;
     font-size: var(--d-font-size-md);
     line-height: var(--d-line-height-md);
+    text-align: center;
     @include ellipsis(1);
     @include disabled;
 
