fix(Cell): 描述样式修改，desc->description

--- a/packages/src/cell/style.scss
+++ b/packages/src/cell/style.scss
@@ -103,9 +103,11 @@
     color: var(--d-secondary-text-color);
   }
 
-  &__desc {
+  &__description {
     color: var(--d-secondary-text-color);
     margin-bottom: var(--d-gap-xxs);
+    line-height: var(--d-line-height-xs);
+    font-size: var(--d-font-size-sm);
   }
 
   &__right-icon,
