fix(Cell): 描述样式修改

--- a/packages/src/cell/style.scss
+++ b/packages/src/cell/style.scss
@@ -3,12 +3,15 @@
 
 .#{$prefix}-cell {
   $parent: &;
-  display: flex;
-  align-items: center;
-  padding: var(--d-horizontal-gap) var(--d-gap-sm);
-  background-color: var(--d-white-color);
   font-size: var(--d-font-size-md);
   line-height: var(--d-line-height-md);
+  padding: var(--d-horizontal-gap) var(--d-gap-sm);
+  background-color: var(--d-white-color);
+
+  &__layout {
+    display: flex;
+    align-items: center;
+  }
 
   &--border {
     &:not(:last-of-type) {
@@ -43,7 +46,10 @@
     }
 
     &-vertical {
-      > #{$parent} {
+      #{$parent} {
+        &__description {
+          margin-top: var(--d-gap-sm);
+        }
         &__wrapper {
           flex-direction: column;
 
@@ -54,7 +60,6 @@
 
             &__content {
               width: 100%;
-              margin-top: var(--d-gap-xs);
             }
           }
         }
@@ -105,7 +110,7 @@
 
   &__description {
     color: var(--d-secondary-text-color);
-    margin-bottom: var(--d-gap-xxs);
+    margin-top: var(--d-gap-xs);
     line-height: var(--d-line-height-xs);
     font-size: var(--d-font-size-sm);
   }
